@@ -163,8 +163,7 @@ process_iq(From, To,
 		    Password = xml:get_tag_cdata(PTag),
 		    case From of
 			#jid{user = User, lserver = Server} ->
-			    ejabberd_auth:set_password(User, Server, Password),
-			    IQ#iq{type = result, sub_el = [SubEl]};
+			    try_set_password(User, Server, Password, IQ, SubEl);
 			_ ->
 			    case try_register(User, Server, Password,
 					      Source, Lang) of
@@ -194,6 +193,20 @@ process_iq(From, To,
 			      {xmlelement, "password", [], []}]}]}
     end.
 
+%% @doc Try to change password and return IQ response
+try_set_password(User, Server, Password, IQ, SubEl) ->
+    case ejabberd_auth:set_password(User, Server, Password) of
+	ok ->
+            IQ#iq{type = result, sub_el = [SubEl]};
+	{error, empty_password} ->
+	    IQ#iq{type = error, sub_el = [SubEl, ?ERR_BAD_REQUEST]};
+	{error, not_allowed} ->
+	    IQ#iq{type = error, sub_el = [SubEl, ?ERR_NOT_ALLOWED]};
+	{error, invalid_jid} ->
+	    IQ#iq{type = error, sub_el = [SubEl, ?ERR_ITEM_NOT_FOUND]};
+	_ ->
+	    IQ#iq{type = error, sub_el = [SubEl, ?ERR_INTERNAL_SERVER_ERROR]}
+    end.
 
 try_register(User, Server, Password, Source, Lang) ->
     case jlib:is_nodename(User) of
